<resources>
    <string name="app_name">Social</string>
    <string name="splash_lbl_1">Secured social app for IT Department</string>
    <string name="splash_lbl_2">Share your memories and feelings</string>
    <string name="welcome_lbl">Welcome !</string>
    <string name="lbl_login_to_continue">Login to continue</string>
    <string name="lbl_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="hint_09">09</string>
    <string name="hint_enter_your_password">Enter Your Password</string>
    <string name="hint_123456">123456</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_hi">Hi !</string>
    <string name="lbl_create_a_new_account">Create a new account</string>
    <string name="lbl_get_otp">Get OTP</string>
    <string name="lbl_don_t_receive_the_otp">Don\'t receive the OTP?</string>
    <string name="margin_resend_code">Resend Code</string>
    <string name="aung_thiha">Jennie</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_agree_to_term_and_service">Agree To Term And Service</string>
    <string name="lbl_moment">Moment</string>
    <string name="lbl_chat">Chat</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_me">Me</string>
    <string name="lbl_setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_bookmarked_moments"><u>Bookmarked Moments</u></string>
    <string name="lbl_moments">Moments</string>
    <string name="lbl_new_moment">New Moment</string>
    <string name="lbl_what_s_on_your_mind">What’s on your mind</string>
    <string name="lbl_chats">Chats</string>
    <string name="lbl_active_now">Active Now</string>
    <string name="lbl_type_a_message">Type a message…</string>
    <string name="lbl_groups">Groups (</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_close_bracket">)</string>
    <string name="lbl_add_new">Add New</string>
    <string name="lbl_new_group">New Group</string>
    <string name="lbl_group_name">Group Name</string>
    <string name="lbl_tap_to_scan">Tap to Scan</string>
    <string name="lbl_scan_the_qr_code_to_add_your_frined_in_ncontact">Scan the QR code to add your friend in\ncontact.</string>
    <string name="lbl_enter_your_email_address">Enter Your Email Address</string>
    <string name="lbl_dash">-</string>
    <string name="lbl_take_photo">Take Photo</string>
    <string name="lbl_choose_from_gallery">Choose From Gallery</string>
    <string name="lbl_select_an_action">Select an action</string>
    <string name="lbl_please_login_again">We have set up your account with our server to\ncontinue with the registration process.\nPlease Login.</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_successful_registration">Successful Registration</string>
    <string name="lbl_search_giphy">Search GIPHY</string>
    <string name="lbl_edit_moment">Edit moment</string>
    <string name="lbl_delete_moment">Delete moment</string>
    <string name="lbl_hide_moment">Hide moment</string>
    <string name="lbl_save_moment">Save moment</string>
    <string name="lbl_account_security">Account Security</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_moments_labs">Moments Labs</string>
    <string name="lbl_about">About</string>
    <string name="lbl_message_notifications">Message Notifications</string>
    <string name="lbl_privacy">Privacy</string>
    <string name="lbl_general">General</string>
    <string name="lbl_help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="ye_ko_zaw">Nyein</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_a_machine_resembling_a_human_being_and_able_to_replicate_certain_human_movements_and_functions_automatically">A machine resembling a human being and able to replicate certain human movements and functions automatically.</string>
    <string name="_1_3">⅓</string>
    <string name="lbl_12_30_am">12:30 AM</string>
    <string name="you_sent_a_video">You sent a Video</string>
    <string name="please_upload_photo_less_than_1mb">Please upload photo less than 1MB</string>
    <string name="lbl_dob">DOB</string>
    <string name="lbl_teacher">Teacher</string>
    <string name="lbl_student">Student</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="bll_first_year">First Year</string>
    <string name="lbl_class">Class</string>
    <string name="lbl_fcm_key">FCM Key</string>
    <string name="content_copy_clipboard">copy clipBoard</string>
    <string name="lbl_phone_number">Phone number</string>
    <string name="txt_privacy">Welcome to our Social App! We understand the importance of privacy and are committed to protecting the personal information of our users. This Privacy Policy outlines how we collect, use, and safeguard the information provided to us.</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="help_and_support">Help and Support</string>
    <string name="lbl_new">New</string>
    <string name="lbl_download">Download</string>
    <string name="lbl_cancel">cancel</string>
    <string name="upload">Upload</string>
    <string name="lbl_download_books">Download Books</string>
    <string name="delete_instruction">If you want to delete,press a book</string>
    <string name="desc_like_click">like click</string>
    <string name="email_thetmonaye_it_gmail_com">Email : thetmonaye.it@gmail.com</string>
</resources>